fixing BG issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ html {
 }
 
 body {
-  height: 120%;
   background-color: rgb(240,240,240);
   font-family: "Slabo 27px", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
